--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Blahaj Games</title>
 
         <!-- Load external CSS styles -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/style.css">
 
     </head>
 
@@ -21,5 +21,6 @@
         <script src="scripts.js"></script>
         
     </body>
+
 
 </html>
