--- a/index.html
+++ b/index.html
@@ -3,24 +3,19 @@
 <html>
     <head>
         <meta charset="utf-8">
-
         <title>Blahaj Games</title>
-
-        <!-- Load external CSS styles -->
-        <link rel="stylesheet" href="/style.css">
-
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-
         <h1>My awesome space</h1>
         <p>play the game on my <a href="https://elara-shelley.itch.io/blahaj-visual-novel">itch.io</a></p>
         <p style="color: white;">hint: la#ae1gbahjm</p>
 
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
-        
     </body>
 
 
 </html>
+
