--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     </head>
 
     <body>
-        <h1>My awesome space</h1>
+        <h1>The blahaj games</h1>
         <p>play the game on my <a href="https://elara-shelley.itch.io/blahaj-visual-novel">itch.io</a></p>
         <p style="color: white;">hint: la#ae1gbahjm</p>
+        <p>If the password for the itch.io page isn't found by halloween then I will release it in the <a href="https://discord.gg/JMgWeCadgy">discord</a> </p>
 
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
@@ -18,4 +19,5 @@
 
 
 </html>
+
 
