--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <body>
         <h1>The blahaj games</h1>
+        <p style="color: white;">itch.io password hint: la#ae1gbahjm</p>
         <p>play the game on my <a href="https://elara-shelley.itch.io/blahaj-visual-novel">itch.io</a></p>
-        <p style="color: white;">hint: la#ae1gbahjm</p>
         <p>If the password for the itch.io page isn't found by halloween then I will release it in the <a href="https://discord.gg/JMgWeCadgy">discord</a> </p>
 
         <!-- Load external JavaScript -->
@@ -19,5 +19,6 @@
 
 
 </html>
+
 
 
