--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>The blahaj games</h1>
         <p style="color: white;">itch.io password hint: la#ae1gbahjm</p>
         <p>play the game on my <a href="https://elara-shelley.itch.io/blahaj-visual-novel">itch.io</a></p>
-        <p>If the password for the itch.io page isn't found by halloween then I will release it in the <a href="https://discord.gg/JMgWeCadgy">discord</a> </p>
+        <p>join the official elara discord<a href="https://discord.gg/JMgWeCadgy">discord</a> </p>
 
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
@@ -19,6 +19,7 @@
 
 
 </html>
+
 
 
 
