--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>The blahaj games</h1>
-        <p style="color: white;">itch.io password hint: la#ae1gbahjm</p>
+        <p style="color: #6996AD;">itch.io password hint: la#ae1gbahjm</p>
         <p>play the game on my <a href="https://elara-shelley.itch.io/blahaj-visual-novel">itch.io</a></p>
         <p>join the official elara discord <a href="https://discord.gg/JMgWeCadgy">discord</a> </p>
 
@@ -19,6 +19,7 @@
 
 
 </html>
+
 
 
 
