--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p style="color: #6996AD;">itch.io password hint: la#ae1gbahjm</p>
         <p>play the game on my <a href="https://elara-shelley.itch.io/blahaj-visual-novel">itch.io</a></p>
         <p>join the official elara discord <a href="https://discord.gg/JMgWeCadgy">discord</a> </p>
+        <p>watch the blahaj visual novel on my <a href="https://www.youtube.com/@elara_shelley">youtube</a></p>
 
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
@@ -19,6 +20,7 @@
 
 
 </html>
+
 
 
 
