--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     </head>
 
     <body>
-        <h1>The blahaj games</h1>
-        <p style="color: #6996AD;">itch.io password hint: la#ae1gbahjm</p>
-        <p>play the game on my <a href="https://elara-shelley.itch.io/blahaj-visual-novel">itch.io</a></p>
-        <p>join the official elara  <a href="https://discord.gg/JMgWeCadgy">discord</a> </p>
-        <p>watch the blahaj visual novel on my <a href="https://www.youtube.com/@elara_shelley">youtube</a></p>
+        <div class="mainbitch">
+            <h1>The blahaj games</h1>
+            <p style="color: #6996AD;">itch.io password hint: la#ae1gbahjm</p>
+            <p>play the game on my <a href="https://elara-shelley.itch.io/blahaj-visual-novel">itch.io</a></p>
+            <p>join the official elara  <a href="https://discord.gg/JMgWeCadgy">discord</a> </p>
+            <p>watch the blahaj visual novel on my <a href="https://www.youtube.com/@elara_shelley">youtube</a></p>
+        </div>
 
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
@@ -20,6 +22,7 @@
 
 
 </html>
+
 
 
 
