--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="mainbitch">
             <h1>The blahaj games</h1>
-            <img width="75%" src="imgs/Photokako-polaroid-JqjzXccHkOLYumQq.png">
+            <img width="100px" src="imgs/Photokako-polaroid-JqjzXccHkOLYumQq.png">
             <p>play the game on my <a href="https://elara-shelley.itch.io/blahaj-visual-novel">itch.io</a></p>
             <p>join the official elara  <a href="https://discord.gg/JMgWeCadgy">discord</a> </p>
             <p>watch the blahaj visual novel on my <a href="https://www.youtube.com/@elara_shelley">youtube</a></p>
@@ -22,6 +22,7 @@
 
 
 </html>
+
 
 
 
