--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="mainbitch">
             <img src="imgs/Photokako-polaroid-JqjzXccHkOLYumQq.png">
-            <p>play the game on my <a href="https://elara-shelley.itch.io/blahaj-visual-novel">itch.io</a></p>
+            <p>play the game on my <a href="https://elara-shelley.itch.io/a-short-blahaj-story">itch.io</a></p>
             <p>join the official elara  <a href="https://discord.gg/JMgWeCadgy">discord</a> </p>
             <p>watch the blahaj visual novel on my <a href="https://www.youtube.com/@elara_shelley">youtube</a></p>
         </div>
@@ -21,6 +21,7 @@
 
 
 </html>
+
 
 
 
