--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Blahaj Games</title>
         <link rel="stylesheet" href="style.css">
     </head>
@@ -21,6 +21,7 @@
 
 
 </html>
+
 
 
 
