--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="mainbitch">
             <img src="imgs/Photokako-polaroid-JqjzXccHkOLYumQq.png">
             <p>play the game on my <a href="https://elara-shelley.itch.io/a-short-blahaj-story">itch.io</a></p>
-            <p>join the official SliverOfStraw0  <a href="https://discord.gg/JMgWeCadgy">discord</a> </p>
+            <p>join the official SliverOfStraw0  <a href="https://discord.gg/7VPWeccjpM">discord</a> </p>
             <p>watch the blahaj visual novel on my <a href="https://www.youtube.com/@SliverOfStraw0">youtube</a></p>
         </div>
 
@@ -21,6 +21,7 @@
 
 
 </html>
+
 
 
 
