--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <body>
         <div class="mainbitch">
             <img src="imgs/Photokako-polaroid-JqjzXccHkOLYumQq.png">
-            <p>play the game on my <a href="https://elara-shelley.itch.io/a-short-blahaj-story">itch.io</a></p>
+            <p>play the game on my <a href="https://sliverofsatrw0.itch.io/blahaj-short-visual-novel">itch.io</a></p>
             <p>join the official SliverOfStraw0  <a href="https://discord.gg/7VPWeccjpM">discord</a> </p>
             <p>watch the blahaj visual novel on my <a href="https://www.youtube.com/@SliverOfStraw0">youtube</a></p>
+            <p>see some more stuff on my <a href="https://www.tiktok.com/@simonsliver.dev">tiktok</a></p>
         </div>
 
         <!-- Load external JavaScript -->
@@ -21,6 +22,7 @@
 
 
 </html>
+
 
 
 
