--- a/secret-link-will-come-soon.html
+++ b/secret-link-will-come-soon.html
@@ -1,1 +1,20 @@
+<!doctype html>
 
+<html>
+    <head>
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Secret msg?</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <div class="mainbitch">
+            <p>come back later :3</p>
+        </div>
+
+        <!-- Load external JavaScript -->
+        <script src="scripts.js"></script>
+    </body>
+
+
+</html>
