--- a/secret-link-will-come-soon.html
+++ b/secret-link-will-come-soon.html
@@ -10,6 +10,7 @@
     <body>
         <div class="mainbitch">
             <p>come back later :3</p>
+            <a href="/index">go home</a>
         </div>
 
         <!-- Load external JavaScript -->
