--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <p>join the official SliverOfStraw0  <a href="https://discord.gg/7VPWeccjpM">discord</a> </p>
             <p>watch the blahaj visual novel on my <a href="https://www.youtube.com/@SliverOfStraw0">youtube</a></p>
             <p>see some more stuff on my <a href="https://www.tiktok.com/@simonsliver.dev">tiktok</a></p>
+            <a href="https://docs.google.com/document/d/11TAj62cjrmYtljNXcvR-VZlCcGUaIN3xO3GBIQqAAnA/edit?usp=sharing">roadmap</a>
         </div>
 
         <!-- Load external JavaScript -->
@@ -22,6 +23,7 @@
 
 
 </html>
+
 
 
 
