--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <body>
         <div class="mainbitch">
-            <img src="imgs/Photokako-polaroid-JqjzXccHkOLYumQq.png">
+            <a href="/archives/main.html">
+                <img src="imgs/Photokako-polaroid-JqjzXccHkOLYumQq.png">
+            </a>
             <p>play the game on my <a href="https://sliverofsatrw0.itch.io/blahaj-short-visual-novel">itch.io</a></p>
             <p>join the official SliverOfStraw0  <a href="https://discord.gg/7VPWeccjpM">discord</a> </p>
             <p>watch the blahaj visual novel on my <a href="https://www.youtube.com/@SliverOfStraw0">youtube</a></p>
@@ -23,6 +25,7 @@
 
 
 </html>
+
 
 
 
