added panels to the bottom of the page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
             <p>watch the blahaj visual novel on my <a href="https://www.youtube.com/@SliverOfStraw0">youtube</a></p>
             <p>see some more stuff on my <a href="https://www.tiktok.com/@simonsliver.dev">tiktok</a></p>
             <a href="https://docs.google.com/document/d/11TAj62cjrmYtljNXcvR-VZlCcGUaIN3xO3GBIQqAAnA/edit?usp=sharing">roadmap</a>
+
+            <div class="flex-container" style="margin-top: 100px;">
+                <div class="bottomPanelIndex">
+                <p>Thanks to my sister for helping me out with this project</p>
+                </div>
+
+                <div class="bottomPanelIndex">
+                <p>Do not train genAI on this website</p>
+                </div>
+            </div>
+
         </div>
+
 
         <!-- Load external JavaScript -->
         <script src="scripts.js"></script>
