updated style, and index text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                 </div>
 
                 <div class="bottomPanelIndex">
-                <p>Do not train genAI on this website</p>
+                <p>Do not use this website to train genAI</p>
+                </div>
+
+                <div class="bottomPanelIndex">
+                <p>"AI is killing the internet" - me and many others</p>
                 </div>
             </div>
 
