updated discord text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="imgs/Photokako-polaroid-JqjzXccHkOLYumQq.png">
             </a>
             <p>play the game on my <a href="https://sliverofsatrw0.itch.io/blahaj-short-visual-novel">itch.io</a></p>
-            <p>join the official SliverOfStraw0  <a href="https://discord.gg/bMtPgUZ87Q">discord</a> </p>
+            <p>join the official blahajgames ARG  <a href="https://discord.gg/bMtPgUZ87Q">discord</a> </p>
             <p>watch the blahaj visual novel on my <a href="https://www.youtube.com/@SliverOfStraw0">youtube</a></p>
             <p>see some more stuff on my <a href="https://www.tiktok.com/@simonsliver.dev">tiktok</a></p>
             <a href="https://docs.google.com/document/d/11TAj62cjrmYtljNXcvR-VZlCcGUaIN3xO3GBIQqAAnA/edit?usp=sharing">roadmap</a>
