--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <div class="flex-container" style="margin-top: 100px;">
                 <div class="bottomPanelIndex">
-                <p>Thanks to my sister for helping me out with this project</p>
+                <p>Thanks to my sister for helping me out with this project!</p>
                 </div>
 
                 <div class="bottomPanelIndex">
@@ -41,6 +41,7 @@
 
 
 </html>
+
 
 
 
