Update link text to 'go home FR'

--- a/secret-link-will-come-soon.html
+++ b/secret-link-will-come-soon.html
@@ -10,7 +10,7 @@
     <body>
         <div class="mainbitch">
             <p>come back later :3</p>
-            <a href="/index">go home</a>
+            <a href="/index">go home FR</a>
         </div>
 
         <!-- Load external JavaScript -->
